# strobelight

./: .gitmodules  CONTRIBUTING.md  README.md  collect_trace.sh  sample-trace.out  sample_analysis_report.html
llm-analysis/: README.md  cuda_llm_analysis_tester.py  cuda_prompt_templates.py  cuda_trace_analyzer.py  cuda_trace_parser.py  cuda_visualization_organizer.py  enhanced_cuda_llm_analyzer.py  enhanced_cuda_trace_analysis.py  requirements.txt
llm-sample-results/: final_report.md  parsed_trace.json
llm-sample-results/analysis/: analysis_results.json  analysis_summary.json
llm-sample-results/analysis/llm_analysis/: llm_analysis_api_distribution_20250423_234826.md  llm_analysis_combined_20250423_234928.md  llm_analysis_kernel_launches_20250423_234853.md  llm_analysis_memory_operations_20250423_234838.md  llm_analysis_optimization_recommendations_20250423_234928.md  llm_analysis_overview_20250423_234810.md  llm_analysis_performance_bottlenecks_20250423_234912.md
llm-sample-results/enhanced/html_report/: cuda_trace_analysis_report_20250423_234800.html
scripts/: build.sh
strobelight/src/: CMakeLists.txt
strobelight/src/profilers/: CMakeLists.txt
strobelight/src/profilers/gpuevent_snoop/: GpuEventSnoop.cpp
strobelight/src/profilers/gpuevent_snoop/bpf/: CUDA_API_LIST  gpuevent_snoop.bpf.c  gpuevent_snoop.h
strobelight/src/utils/: CMakeLists.txt  Guard.h  ProcUtils.cpp  ProcUtils.h  SymUtils.cpp  SymUtils.h
tools/: gen_vmlinux_h.sh
tools/cmake/: FindBpfObject.cmake  FindLibBpf.cmake
